test/Fail/InvalidNamePartLiteral.agda
test = forall _0_ → Set
