test/Fail/InvalidNamePartLiteral.err
InvalidNamePartLiteral.agda:1.19: error: [ParseError]
in the name _0_, the part 0 is not valid because it is a literal
